--- a/tsuro/tsuro.csproj
+++ b/tsuro/tsuro.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\TsuroLibrary.csproj" />
+  </ItemGroup>
 </Project>
