WIP - Refactor players out of board and into admin

--- a/UnitTestProject1/TsuroTests.csproj
+++ b/UnitTestProject1/TsuroTests.csproj
@@ -19,4 +19,7 @@
     <ProjectReference Include="..\ClassLibrary1\TsuroLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="NetworkPlayerTests.cs" />
+  </ItemGroup>
 </Project>
